--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,12 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
