--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
