--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -13,12 +13,13 @@
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
@@ -28,6 +29,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8",
