--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "formidable": "^3.5.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
