--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -16,6 +16,7 @@
     "formidable": "^3.5.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "next-intl": "^3.26.3",
     "nodemailer": "^6.9.13",
     "prisma": "^5.11.0",
     "react": "^18",
