--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "driver.js": "^1.3.5",
     "formidable": "^3.5.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
