--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,8 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/bar": "^0.98.0",
+    "@nivo/core": "^0.98.0",
+    "@nivo/pie": "^0.98.0",
     "@prisma/client": "^5.11.0",
+    "apexcharts": "^4.7.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.0",
     "driver.js": "^1.3.5",
     "formidable": "^3.5.1",
@@ -21,6 +26,8 @@
     "nodemailer": "^6.9.13",
     "prisma": "^5.11.0",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
