--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,16 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^6.0.22",
+    "@mantine/hooks": "^6.0.22",
     "@nivo/bar": "^0.98.0",
     "@nivo/core": "^0.98.0",
     "@nivo/pie": "^0.98.0",
     "@prisma/client": "^5.11.0",
+    "@tabler/icons-react": "^3.33.0",
     "apexcharts": "^4.7.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.9",
     "clsx": "^2.1.0",
     "driver.js": "^1.3.5",
     "formidable": "^3.5.1",
+    "mantine-react-table": "^1.3.4",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-intl": "^3.26.3",
