--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,8 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^6.0.22",
-    "@mantine/hooks": "^6.0.22",
     "@nivo/bar": "^0.98.0",
     "@nivo/core": "^0.98.0",
     "@nivo/pie": "^0.98.0",
@@ -23,7 +21,7 @@
     "clsx": "^2.1.0",
     "driver.js": "^1.3.5",
     "formidable": "^3.5.1",
-    "mantine-react-table": "^1.3.4",
+    "framer-motion": "^12.13.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-intl": "^3.26.3",
@@ -32,6 +30,7 @@
     "react": "^18",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18",
     "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
