--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,47 +10,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nivo/bar": "^0.98.0",
-    "@nivo/core": "^0.98.0",
-    "@nivo/pie": "^0.98.0",
-    "@prisma/client": "^5.11.0",
-    "@tabler/icons-react": "^3.33.0",
-    "apexcharts": "^4.7.0",
-    "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.9",
-    "clsx": "^2.1.0",
-    "driver.js": "^1.3.5",
-    "formidable": "^3.5.1",
-    "framer-motion": "^12.13.0",
-    "next": "^14.2.4",
-    "next-auth": "^4.24.7",
-    "next-intl": "^3.26.3",
-    "nodemailer": "^6.9.13",
-    "prisma": "^5.11.0",
-    "react": "^18",
-    "react-apexcharts": "^1.7.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-data-table-component": "^7.7.0",
-    "react-dom": "^18",
-    "react-select": "^5.8.1",
-    "react-toastify": "^10.0.5",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "@nivo/bar": "0.98.0",
+    "@nivo/core": "0.98.0",
+    "@nivo/pie": "0.98.0",
+    "@prisma/client": "5.11.0",
+    "@tabler/icons-react": "3.33.0",
+    "apexcharts": "4.7.0",
+    "bcryptjs": "2.4.3",
+    "clsx": "2.1.0",
+    "driver.js": "1.3.5",
+    "formidable": "3.5.4",
+    "framer-motion": "12.13.0",
+    "next": "14.2.29",
+    "next-auth": "4.24.11",
+    "next-intl": "3.26.3",
+    "nodemailer": "6.9.13",
+    "prisma": "5.11.0",
+    "react": "18",
+    "react-apexcharts": "1.7.0",
+    "react-data-table-component": "7.7.0",
+    "react-dom": "18",
+    "react-select": "5.8.1",
+    "react-toastify": "10.0.5",
+    "sqlite": "5.1.1",
+    "sqlite3": "5.1.7"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/formidable": "^3.4.5",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^8",
+    "@types/bcryptjs": "2.4.6",
+    "@types/formidable": "3.4.5",
+    "@types/node": "20",
+    "@types/nodemailer": "6.4.15",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
+    "eslint": "8",
     "eslint-config-next": "14.1.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
-    "typescript": "^5"
+    "ts-node": "10.9.2",
+    "tsx": "4.19.4",
+    "typescript": "5"
   }
 }
