--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -31,9 +31,7 @@
     "react-data-table-component": "7.7.0",
     "react-dom": "18",
     "react-select": "5.8.1",
-    "react-toastify": "10.0.5",
-    "sqlite": "5.1.1",
-    "sqlite3": "5.1.7"
+    "react-toastify": "10.0.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
