--- a/cafeversity/package.json
+++ b/cafeversity/package.json
@@ -10,6 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/modifiers": "9.0.0",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@nivo/bar": "0.98.0",
     "@nivo/core": "0.98.0",
     "@nivo/pie": "0.98.0",
